feat: 자동차 이름 중복 테스트 구현